# humorbot

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
humorbot/: __init__.py  app.py  backend.py  bot.py  config.py
humorbot/templates/: base.html  index.html  privacy.html  support.html  terms.html  usage.html
tests/: test_backend.py  test_bot.py
